[gd_scene load_steps=8 format=3 uid="uid://bgtv73nd0hj24"]

[ext_resource type="Script" path="res://Notemap/Notemap.gd" id="1_nnnh3"]
[ext_resource type="Script" path="res://Notemap/lol.gd" id="2_ks4lt"]
[ext_resource type="PackedScene" uid="uid://cekddc2mhatd7" path="res://Conductor/Conductor.tscn" id="2_vwv7k"]
[ext_resource type="PackedScene" uid="uid://cdjwmy57rt7ln" path="res://Note/NotePosition.tscn" id="3_xrqic"]
[ext_resource type="AudioStream" uid="uid://dtuigocttxsdi" path="res://Music/crystallized.mp3" id="3_yils8"]
[ext_resource type="AudioStream" uid="uid://ddwj2b5prhha6" path="res://Music/Tick - Sound Effect (HD).mp3" id="4_5jxuh"]
[ext_resource type="PackedScene" uid="uid://bal1l5hwfybsg" path="res://Note/Note.tscn" id="4_u1218"]

[node name="Notemap" type="Node2D"]
script = ExtResource("1_nnnh3")

[node name="lol" type="Node2D" parent="."]
script = ExtResource("2_ks4lt")

[node name="Music" type="AudioStreamPlayer" parent="lol"]
stream = ExtResource("3_yils8")
volume_db = -28.549

[node name="Metronome" type="AudioStreamPlayer" parent="lol"]
stream = ExtResource("4_5jxuh")

[node name="Conductor" parent="." instance=ExtResource("2_vwv7k")]
visible = false

[node name="NotePosition" parent="." instance=ExtResource("3_xrqic")]
visible = false

[node name="Note" parent="." instance=ExtResource("4_u1218")]
visible = false
z_index = 1

[connection signal="createNote" from="." to="lol" method="_on_notemap_create_note"]
[connection signal="createNote" from="." to="Note" method="_on_notemap_create_note"]
[connection signal="draw" from="." to="lol" method="_on_notemap_draw_note"]
[connection signal="drawNote" from="." to="lol" method="_on_notemap_draw_note"]
[connection signal="drawNote" from="." to="NotePosition" method="_on_notemap_draw_note"]
[connection signal="drawNote" from="." to="Note" method="_on_notemap_draw_note"]
[connection signal="noteBeatmap" from="." to="lol" method="_on_notemap_note_beatmap"]
[connection signal="noteBeatmap" from="." to="Conductor" method="_on_notemap_note_beatmap"]
[connection signal="notePlacement" from="." to="lol" method="_on_notemap_note_placement"]
[connection signal="notePlacement" from="." to="NotePosition" method="_on_notemap_note_placement"]
[connection signal="draw" from="NotePosition" to="Note" method="_on_note_position_draw"]
